--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TechCon 2024 - Home</title>
+  <title>TechCon 2024</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      line-height: 1.6;
-      background-color: #f4f4f4;
+      background-color: #f9f9f9;
       color: #333;
     }
 
     header {
-      background-color: #20232a;
-      color: #61dafb;
-      padding: 1em 0;
+      background-color: #1a1a1a;
+      color: #fff;
       text-align: center;
+      padding: 1em 0;
     }
 
     nav {
@@ -36,28 +35,29 @@
     }
 
     main {
-      padding: 20px;
+      padding: 2em;
+      max-width: 900px;
+      margin: auto;
       background-color: #fff;
     }
 
     section {
-      max-width: 800px;
-      margin: auto;
+      margin-top: 1.5em;
     }
 
     video {
       width: 100%;
-      height: auto;
-      margin-top: 15px;
+      max-height: 480px;
       border: 2px solid #ccc;
+      margin-top: 1em;
     }
 
     footer {
-      background-color: #20232a;
+      background-color: #1a1a1a;
       color: #ccc;
       text-align: center;
       padding: 1em 0;
-      margin-top: 30px;
+      margin-top: 2em;
     }
   </style>
 </head>
@@ -65,7 +65,7 @@
 
   <header>
     <h1>TechCon 2024</h1>
-    <nav aria-label="Main navigation">
+    <nav aria-label="Main Navigation">
       <a href="about.html">About</a>
       <a href="schedule.html">Schedule</a>
       <a href="register.html">Register</a>
@@ -74,15 +74,16 @@
   </header>
 
   <main>
-    <section aria-labelledby="intro">
-      <h2 id="intro">Welcome to TechCon 2024</h2>
+    <section>
+      <h2>Welcome to TechCon 2024</h2>
       <p>
-        TechCon 2024 is the premier technology conference bringing together innovators,
-        developers, entrepreneurs, and thought leaders from around the globe.
-        Join us for inspiring keynotes, hands-on workshops, and cutting-edge product showcases.
+        TechCon 2024 is your gateway to innovation and inspiration in the world of technology.
+        Join us for an unforgettable event featuring leading tech experts, immersive workshops,
+        and groundbreaking product launches.
       </p>
-      <video controls aria-label="Promotional video for TechCon 2024">
-        <source src="media/techcon-promo.mp4" type="video/mp4" />
+
+      <video controls>
+        <source src="media/techcon-promo.mp4" type="video/mp4">
         <track src="media/techcon-subtitles.vtt" kind="subtitles" srclang="en" label="English Subtitles" default>
         Your browser does not support the video tag.
       </video>
