--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,1 +1,124 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About TechCon 2024</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
 
+    header {
+      background-color: #1a1a1a;
+      color: #fff;
+      text-align: center;
+      padding: 1em 0;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    nav a {
+      color: #61dafb;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 2em;
+      max-width: 1000px;
+      margin: auto;
+      background-color: #fff;
+    }
+
+    article {
+      margin-bottom: 2em;
+    }
+
+    article img {
+      max-width: 100%;
+      height: auto;
+      margin-top: 1em;
+      border: 1px solid #ccc;
+    }
+
+    footer {
+      background-color: #1a1a1a;
+      color: #ccc;
+      text-align: center;
+      padding: 1em 0;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>About TechCon 2024</h1>
+    <nav aria-label="Main Navigation">
+      <a href="index.html">Home</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="register.html">Register</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <article>
+      <h2>Our History</h2>
+      <p>
+        TechCon began in 2010 as a small meetup for software developers and has grown into
+        one of the world's most influential technology conferences. Each year, it gathers thousands
+        of tech enthusiasts to explore emerging technologies, industry trends, and collaborative innovations.
+      </p>
+      <img src="media/techcon-history.jpg" alt="A photo from the first TechCon conference in 2010">
+    </article>
+
+    <article>
+      <h2>Our Mission</h2>
+      <p>
+        At TechCon, our mission is to empower the global tech community through education, connection,
+        and innovation. We strive to build a platform where ideas flourish, networks expand, and careers ignite.
+      </p>
+      <img src="media/techcon-mission.jpg" alt="Inspirational image representing innovation and technology">
+    </article>
+
+    <article>
+      <h2>Notable Past Speakers</h2>
+      <p>Over the years, TechCon has hosted a lineup of remarkable speakers who've shaped the future of technology:</p>
+
+      <div>
+        <h3>Dr. Ada Lovecode</h3>
+        <p>AI pioneer and author of “Ethics in the Machine Age.” She spoke at TechCon 2021 about the future of responsible AI.</p>
+        <img src="media/ada-lovecode.jpg" alt="Dr. Ada Lovecode speaking at TechCon 2021">
+      </div>
+
+      <div>
+        <h3>Elon Syntax</h3>
+        <p>Founder of NeuralWeb and advocate for open-source brain-computer interfaces. Presented at TechCon 2022 on deep learning trends.</p>
+        <img src="media/elon-syntax.jpg" alt="Elon Syntax presenting deep learning trends at TechCon">
+      </div>
+
+      <div>
+        <h3>Linus Stack</h3>
+        <p>CTO of KernelWare and key contributor to decentralized internet standards. His 2023 talk on Web3 inspired thousands.</p>
+        <img src="media/linus-stack.jpg" alt="Linus Stack on stage discussing Web3 and decentralization">
+      </div>
+    </article>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+  </footer>
+
+</body>
+</html>
