--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -97,19 +97,19 @@
       <p>Over the years, TechCon has hosted a lineup of remarkable speakers who've shaped the future of technology:</p>
 
       <div>
-        <h3>Dr. Ada Lovecode</h3>
+        <h3>Dr. Ken Mande</h3>
         <p>AI pioneer and author of “Ethics in the Machine Age.” She spoke at TechCon 2021 about the future of responsible AI.</p>
         <img src="media/ada-lovecode.jpg" alt="Dr. Ada Lovecode speaking at TechCon 2021">
       </div>
 
       <div>
-        <h3>Elon Syntax</h3>
+        <h3>Nayombe Syntax</h3>
         <p>Founder of NeuralWeb and advocate for open-source brain-computer interfaces. Presented at TechCon 2022 on deep learning trends.</p>
         <img src="media/elon-syntax.jpg" alt="Elon Syntax presenting deep learning trends at TechCon">
       </div>
 
       <div>
-        <h3>Linus Stack</h3>
+        <h3>George Stack</h3>
         <p>CTO of KernelWare and key contributor to decentralized internet standards. His 2023 talk on Web3 inspired thousands.</p>
         <img src="media/linus-stack.jpg" alt="Linus Stack on stage discussing Web3 and decentralization">
       </div>
