--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,1 +1,138 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Schedule for TechCon 2024</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
 
+    header {
+      background-color: #1a1a1a;
+      color: #fff;
+      text-align: center;
+      padding: 1em 0;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    nav a {
+      color: #61dafb;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 2em;
+      max-width: 1000px;
+      margin: auto;
+      background-color: #fff;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1em;
+    }
+
+    caption {
+      font-size: 1.2em;
+      margin-bottom: 0.5em;
+      font-weight: bold;
+      text-align: left;
+    }
+
+    th, td {
+      border: 1px solid #ccc;
+      padding: 0.75em;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f0f0f0;
+    }
+
+    footer {
+      background-color: #1a1a1a;
+      color: #ccc;
+      text-align: center;
+      padding: 1em 0;
+      margin-top: 2em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Schedule for TechCon 2024</h1>
+    <nav aria-label="Main Navigation">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="register.html">Register</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <table>
+      <caption>Detailed Schedule of Events for TechCon 2024</caption>
+      <thead>
+        <tr>
+          <th scope="col">Time</th>
+          <th scope="col">Session</th>
+          <th scope="col">Speaker</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>09:00 AM – 10:00 AM</td>
+          <td>Opening Keynote: The Future of AI</td>
+          <td>Dr. Ada Lovecode</td>
+        </tr>
+        <tr>
+          <td>10:15 AM – 11:15 AM</td>
+          <td>Building Scalable Web Apps</td>
+          <td>Elon Syntax</td>
+        </tr>
+        <tr>
+          <td>11:30 AM – 12:30 PM</td>
+          <td>Cybersecurity in 2024</td>
+          <td>Linus Stack</td>
+        </tr>
+        <tr>
+          <td>01:30 PM – 02:30 PM</td>
+          <td>Panel: Women in Tech</td>
+          <td>Various Panelists</td>
+        </tr>
+        <tr>
+          <td>02:45 PM – 03:45 PM</td>
+          <td>Quantum Computing Basics</td>
+          <td>Dr. Qubit Nova</td>
+        </tr>
+        <tr>
+          <td>04:00 PM – 05:00 PM</td>
+          <td>Closing Remarks & Networking</td>
+          <td>TechCon Organizers</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+  </footer>
+
+</body>
+</html>
