--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -111,7 +111,7 @@
 
   <header>
     <h1>Contact Us</h1>
-    <nav aria-label="Main Navigation">
+    <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="schedule.html">Schedule</a>
