--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -98,7 +98,7 @@
 
   <header>
     <h1>Register for TechCon 2024</h1>
-    <nav aria-label="Main Navigation">
+    <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="schedule.html">Schedule</a>
