--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -130,7 +130,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+    <p>Copyright 2024 TechCon. All rights reserved. Copyright.</p>
   </footer>
 
 </body>
