--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -131,7 +131,7 @@
   </main>
 
   <footer>
-    <p>Copyright 2024 TechCon. All rights reserved. Copyright</p>
+    <p>copyright 2024 TechCon. All rights reserved. copyright</p>
   </footer>
 
 </body>
